first changes to actual practice site

--- a/CS 198/practice website.html
+++ b/CS 198/practice website.html
@@ -9,18 +9,22 @@
 
   </head>
   <body>
-    <main>
+    <section class = "introduction">
+      <div class = "container">
         <h1>Welcome to my first website! </h1>
         <img 
           src="me eating octopus.jpg" 
           alt = "picture of me"
-          width = "700"
-          height = "700"
+          width = "500"
+          height = "500"
         >
-        <p>Yes that is an octopus in my mouth</p>
-        <p><a href="https://medium.com/@mihirsingh604" >Check out my blog! </a></p>
+        <p><a href="https://medium.com/@mihirsingh604"> Check out my blog! </a></p>
+      </div>
 
-    </main>
+
+
+    </section>
+
 	<script src="index.js"></script>
   </body>
 </html>
