--- a/CS 198/practice website.html
+++ b/CS 198/practice website.html
@@ -10,17 +10,21 @@
   </head>
   <body>
     <section class = "introduction">
-      <div class = "container">
-        <h1>Welcome to my first website! </h1>
+      <h1>Welcome to my first website! </h1>
         <img 
           src="me eating octopus.jpg" 
           alt = "picture of me"
           width = "500"
           height = "500"
         >
+    </section>
+
+    <section class = "leftmost-column">
+      <p>About me</p>
+      <div class = "about-me">
+        <p>I'm just another college-age kid trying to understand what it means to be me.</p>
         <p><a href="https://medium.com/@mihirsingh604"> Check out my blog! </a></p>
       </div>
-
 
 
     </section>
