--- a/CS 198/practice website.html
+++ b/CS 198/practice website.html
@@ -25,6 +25,14 @@
         <p>I'm just another college-age kid trying to understand what it means to be me.</p>
         <p><a href="https://medium.com/@mihirsingh604"> Check out my blog! </a></p>
       </div>
+    </section>
+
+    <section class = "middle-column">
+      <p>Education</p>
+      <div>
+        <p>University of California, Berkeley</p>
+        <p>Major: Data Science, Cognitive Science</p>
+      </div>
 
 
     </section>
